# inv

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  import_data.py  pyproject.toml
app/: crud.py  db.py  main.py  models.py  schemas.py  strategy.py
tests/: test_data.py  test_strategy.py
